@@ -940,6 +940,7 @@ qc pass: interop1: lacp
 qc pass: interop1: fragmentation and reassembly
 qc pass: interop1: sgt encapsulation
 qc pass: interop1: verify source
+qc pass: interop1: qinq encapsulation
 qc pass: interop1: ike1 with ipv4
 qc pass: interop1: ike1 with ipv6
 qc pass: interop1: ike1 with 3des
@@ -1064,6 +1065,8 @@ qc pass: interop2: point2point ethernet encapsulation
 qc pass: interop2: lacp
 qc pass: interop2: fragmentation and reassembly
 qc pass: interop2: verify source
+qc pass: interop2: qinq encapsulation
+qc pass: interop2: dot1q in dot1ad encapsulation
 qc pass: interop2: point2point isis
 qc pass: interop2: isis dis
 qc pass: interop2: isis nondis
@@ -1179,6 +1182,7 @@ qc pass: interop9: ethernet encapsulation
 qc pass: interop9: dot1q encapsulation
 qc pass: interop9: fragmentation and reassembly
 qc pass: interop9: verify source
+qc pass: interop9: qinq encapsulation
 qc pass: interop9: point2point isis
 qc pass: interop9: isis dis
 qc pass: interop9: isis nondis
