@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.8.7-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-08-07 19:42:30, took 00:12:47, with 60 workers, on 3528 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2024-08-07 20:07:12, took 00:13:29, with 60 workers, on 3532 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -961,6 +961,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-eth07.tst">intop1-eth07.tst</a></td><td>success</td><td>interop1: fragmentation and reassembly</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-eth08.tst">intop1-eth08.tst</a></td><td>success</td><td>interop1: sgt encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-eth09.tst">intop1-eth09.tst</a></td><td>success</td><td>interop1: verify source</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/intop1-eth10.tst">intop1-eth10.tst</a></td><td>success</td><td>interop1: qinq encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-ike101.tst">intop1-ike101.tst</a></td><td>success</td><td>interop1: ike1 with ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-ike102.tst">intop1-ike102.tst</a></td><td>success</td><td>interop1: ike1 with ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-ike103.tst">intop1-ike103.tst</a></td><td>success</td><td>interop1: ike1 with 3des</td></tr>
@@ -1085,6 +1086,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/intop2-eth05.tst">intop2-eth05.tst</a></td><td>success</td><td>interop2: lacp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop2-eth06.tst">intop2-eth06.tst</a></td><td>success</td><td>interop2: fragmentation and reassembly</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop2-eth07.tst">intop2-eth07.tst</a></td><td>success</td><td>interop2: verify source</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/intop2-eth08.tst">intop2-eth08.tst</a></td><td>success</td><td>interop2: qinq encapsulation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/intop2-eth09.tst">intop2-eth09.tst</a></td><td>success</td><td>interop2: dot1q in dot1ad encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop2-isis01.tst">intop2-isis01.tst</a></td><td>success</td><td>interop2: point2point isis</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop2-isis02.tst">intop2-isis02.tst</a></td><td>success</td><td>interop2: isis dis</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop2-isis03.tst">intop2-isis03.tst</a></td><td>success</td><td>interop2: isis nondis</td></tr>
@@ -1200,6 +1203,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/intop9-eth02.tst">intop9-eth02.tst</a></td><td>success</td><td>interop9: dot1q encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop9-eth03.tst">intop9-eth03.tst</a></td><td>success</td><td>interop9: fragmentation and reassembly</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop9-eth04.tst">intop9-eth04.tst</a></td><td>success</td><td>interop9: verify source</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/intop9-eth05.tst">intop9-eth05.tst</a></td><td>success</td><td>interop9: qinq encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop9-isis01.tst">intop9-isis01.tst</a></td><td>success</td><td>interop9: point2point isis</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop9-isis02.tst">intop9-isis02.tst</a></td><td>success</td><td>interop9: isis dis</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop9-isis03.tst">intop9-isis03.tst</a></td><td>success</td><td>interop9: isis nondis</td></tr>
