@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.8.7-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-08-07 19:51:15, took 00:08:25, with 60 workers, on 631 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-08-07 20:16:23, took 00:08:51, with 60 workers, on 631 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
