@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.8.7-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-08-07 19:51:15, took 00:08:25, with 60 workers, on 631 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2024-08-07 20:16:23, took 00:08:51, with 60 workers, on 631 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
